--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ letter-spacing:-0.5px;
 /*===============================================*/
 .homenavbar{
 width:100%;
-background-color: #FFCC00;
+background-color: #2e2e2e;
 }
 .homenavbar h1{
 color:#fff;
@@ -2456,7 +2456,7 @@ height: 100%;
 /* 5.1 TOP NAVIGATION AND HEADER */
 .navbarpages{
 height:50px;
-background-color: #FFCC00;
+background-color: #2e2e2e;
 }
 .logo_text{ 
 font-size:22px;
